[project]
name = "django-google-cloud-run"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "gunicorn>=26.0.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scipy>=1.18.0",
    "whitenoise>=6.12.0",
]
